syntax = "proto3";
package user;
option go_package = "./user";

message RegisterRequest {
  string phone = 1;
  string password = 2;
  string nickname = 3;
  int32  role = 4;        // 用户角色：1=老板, 2=陪玩, 3=管理员（默认1）
}

message RegisterResponse {
  uint64 id = 1;
  uint64 uid = 2;
}

message LoginRequest {
  string phone = 1;
  string password = 2;
}

message LoginResponse {
  uint64 id = 1;
  uint64 uid = 2;
}

message GetUserRequest {
  uint64 id = 1;
  uint64 uid = 2;
  string phone = 3;
}

message UserInfo {
  uint64 id = 1;
  uint64 uid = 2;
  string nickname = 3;
  string phone = 4;
  int32  role = 5;        // 用户角色：1=老板, 2=陪玩, 3=管理员
  string avatar_url = 6; // 头像URL
  string bio = 7;        // 个人简介
  int64  balance = 8;    // 帅币可用余额
  int64  frozen_balance = 9; // 冻结帅币余额（预留）
  int64  follower_count = 10; // 粉丝数（冗余展示，最终以 follows 表为准）
  int64  following_count = 11; // 关注数（冗余展示）
}

message GetUserResponse {
  UserInfo user = 1;
}

message UpdateUserRequest {
  uint64 id = 1;
  string nickname = 2;   // 可选
  string password = 3;   // 可选
  string phone = 4;      // 可选
  int32  role = 5;       // 可选，用户角色
  string avatar_url = 6; // 可选，头像URL
  string bio = 7;        // 可选，个人简介
}

message UpdateUserResponse {
  UserInfo user = 1;
}

message LoginByCodeRequest {
  string phone = 1;
}

message LoginByCodeResponse {
  uint64 id = 1;
  uint64 uid = 2;
}

message ForgetPasswordRequest {
  string phone = 1;
  string password = 3;
}

message ForgetPasswordResponse {
  uint64 id = 1;
  uint64 uid = 2;
}

// 修改手机号（需验证原手机号）
message ChangePhoneRequest {
  uint64 user_id = 1;
  string old_phone = 2;
  string new_phone = 3;
}

message ChangePhoneResponse {
  bool success = 1;
}

// 修改密码（需验证原手机号）
message ChangePasswordRequest {
  uint64 user_id = 1;
  string old_phone = 2;
  string new_password = 3;
}

message ChangePasswordResponse {
  bool success = 1;
}

// ---------------- 帅币钱包相关 ----------------

// 钱包信息
message WalletInfo {
  uint64 user_id = 1;       // 用户ID
  int64  balance = 2;       // 帅币可用余额
  int64  frozen_balance = 3; // 冻结帅币余额（预留）
}

// 查询钱包
message GetWalletRequest {
  uint64 user_id = 1;       // 用户ID
}

message GetWalletResponse {
  WalletInfo wallet = 1;
}

// 充值帅币（现金 -> 帅币），这里只处理“加币”，实际支付回调可以在上游确认后调用此接口
message RechargeRequest {
  uint64 user_id = 1;       // 用户ID
  int64  amount = 2;        // 充值帅币数量（正数）
  string biz_order_id = 3;  // 关联的支付单号 / 业务订单号
  string remark = 4;        // 备注
}

message RechargeResponse {
  WalletInfo wallet = 1;    // 充值后的最新钱包信息
}

// 充值订单落库（pending）
message CreateRechargeOrderRequest {
  uint64 user_id = 1;      // 用户ID
  string order_no = 2;     // 充值单号
  int64  amount = 3;       // 充值金额（帅币）
  string pay_type = 4;     // 支付方式（alipay 等）
  string remark = 5;       // 备注
  int32  status = 6;       // 订单状态：0=待支付,1=成功,2=失败,3=关闭
}

message CreateRechargeOrderResponse {
  bool success = 1;
}

// 更新充值订单状态
message UpdateRechargeOrderStatusRequest {
  string order_no = 1;     // 充值单号
  int32  status = 2;       // 订单状态：0=待支付,1=成功,2=失败,3=关闭
  string trade_no = 3;     // 支付平台交易号（可选）
  string remark = 4;       // 备注（可选）
  int64  paid_at = 5;      // 支付完成时间（Unix 秒，可选）
}

message UpdateRechargeOrderStatusResponse {
  bool success = 1;
}

// 充值记录列表
message RechargeOrderInfo {
  string order_no = 1;
  int32  status = 2;      // 订单状态：0=待支付,1=成功,2=失败,3=关闭
  int64  amount = 3;      // 充值金额
  string pay_type = 4;    // 支付方式
  string trade_no = 5;    // 支付平台交易号（可选）
  int64  paid_at = 6;     // 支付完成时间（Unix 秒，可选）
  int64  created_at = 7;  // 创建时间（Unix 秒）
}

message RechargeListRequest {
  uint64 user_id = 1;     // 用户ID
  int32  status = 2;      // 订单状态筛选（-1=全部）
  int32  page = 3;        // 页码（从1开始）
  int32  page_size = 4;   // 每页数量
}

message RechargeListResponse {
  repeated RechargeOrderInfo orders = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

// 消费帅币（支付订单时扣减帅币）
message ConsumeRequest {
  uint64 user_id = 1;       // 用户ID
  int64  amount = 2;        // 消费帅币数量（正数，服务内部会按负数写流水）
  string biz_order_id = 3;  // 关联的业务订单号
  string remark = 4;        // 备注
}

message ConsumeResponse {
  WalletInfo wallet = 1;    // 扣减后的最新钱包信息
}

// ---------------- 陪玩信息相关 ----------------

// 陪玩信息
message CompanionInfo {
  uint64 user_id = 1;        // 用户ID
  string game_skill = 2;     // 游戏技能（单个游戏名称）
  int64  price_per_hour = 3;  // 每小时价格（帅币）
  int32  status = 4;         // 状态：0=离线, 1=在线, 2=忙碌
  double rating = 5;          // 评分（0-5分）
  int64  total_orders = 6;    // 总接单数
  bool   is_verified = 7;    // 是否认证
  string avatar_url = 8;     // 头像URL
  string bio = 9;            // 个人简介
  string nickname = 10;      // 昵称
}

// ------------- 游戏技能（词典）相关 -------------
message GameSkill {
  uint64 id = 1;              // 技能ID
  string name = 2;            // 技能名称（唯一）
  string description = 3;     // 描述（可选）
}

message ListGameSkillsRequest {}

message ListGameSkillsResponse {
  repeated GameSkill skills = 1;
}

message CreateGameSkillRequest {
  string name = 1;           // 技能名称（必填，唯一）
  string description = 2;    // 描述（可选）
}

message CreateGameSkillResponse {
  GameSkill skill = 1;
}

message UpdateGameSkillRequest {
  uint64 id = 1;             // 技能ID（必填）
  string name = 2;           // 技能名称（必填，唯一）
  string description = 3;    // 描述（可选）
}

message UpdateGameSkillResponse {
  GameSkill skill = 1;
}

message DeleteGameSkillRequest {
  uint64 id = 1;             // 技能ID（必填）
}

message DeleteGameSkillResponse {
  bool success = 1;
}

// 获取陪玩信息
message GetCompanionProfileRequest {
  uint64 user_id = 1;        // 用户ID
}

message GetCompanionProfileResponse {
  CompanionInfo profile = 1;
}

// 更新陪玩信息
message UpdateCompanionProfileRequest {
  uint64 user_id = 1;         // 用户ID（必填）
  string game_skill = 2;      // 可选，游戏技能（单个游戏名称）
  int64  price_per_hour = 3;  // 可选，每小时价格（帅币）
  int32  status = 4;          // 可选，状态：0=离线, 1=在线, 2=忙碌
}

message UpdateCompanionProfileResponse {
  CompanionInfo profile = 1;
}

// 更新陪玩统计信息（评分 & 接单数）
message UpdateCompanionStatsRequest {
  uint64 user_id = 1;      // 用户ID（陪玩）
  int64  delta_orders = 2; // 接单数增量（一般为1）
  double new_rating = 3;   // 本次订单评分（0-5）
}

message UpdateCompanionStatsResponse {
  CompanionInfo profile = 1;
}

// 获取陪玩列表（用于订单匹配）
message GetCompanionListRequest {
  string game_skill = 1;         // 可选，游戏技能筛选（单个游戏名称）
  int32  min_price = 2;           // 可选，最低价格
  int32  max_price = 3;           // 可选，最高价格
  int32  status = 4;              // 可选，状态筛选：0=离线, 1=在线, 2=忙碌（默认只返回在线）
  bool   is_verified = 5;        // 可选，是否只返回认证陪玩
  int32  page = 6;               // 页码（从1开始）
  int32  page_size = 7;          // 每页数量
}

message GetCompanionListResponse {
  repeated CompanionInfo companions = 1; // 陪玩列表
  int32 total = 2;                       // 总数
  int32 page = 3;                        // 当前页码
  int32 page_size = 4;                   // 每页数量
}

// ---------------- 陪玩排名相关 ----------------

// 陪玩排名项
message CompanionRankingItem {
  uint64 user_id = 1;        // 用户ID
  string nickname = 2;       // 昵称
  string avatar_url = 3;     // 头像URL
  double rating = 4;         // 评分（用于评分排名）
  int64  total_orders = 5;   // 总接单数（用于接单数排名）
  int32  rank = 6;          // 排名（从1开始）
  bool   is_verified = 7;    // 是否认证
}

// 查询陪玩评分排名
message GetCompanionRatingRankingRequest {
  int32 page = 1;           // 页码（从1开始）
  int32 page_size = 2;      // 每页数量（默认10，最大100）
}

message GetCompanionRatingRankingResponse {
  repeated CompanionRankingItem rankings = 1; // 排名列表
  int32 total = 2;                            // 总数
  int32 page = 3;                             // 当前页码
  int32 page_size = 4;                        // 每页数量
}

// 查询陪玩总接单数排名
message GetCompanionOrdersRankingRequest {
  int32 page = 1;           // 页码（从1开始）
  int32 page_size = 2;      // 每页数量（默认10，最大100）
}

message GetCompanionOrdersRankingResponse {
  repeated CompanionRankingItem rankings = 1; // 排名列表
  int32 total = 2;                            // 总数
  int32 page = 3;                             // 当前页码
  int32 page_size = 4;                        // 每页数量
}

// ---------------- 关注相关接口 ----------------

// 关注用户
message FollowUserRequest {
  uint64 operator_id = 1; // 操作人ID（关注者）
  uint64 user_id = 2;     // 被关注的用户ID
}

message FollowUserResponse {
  bool success = 1;
  string message = 2;
}

// 取消关注用户
message UnfollowUserRequest {
  uint64 operator_id = 1; // 操作人ID（关注者）
  uint64 user_id = 2;     // 要取消关注的用户ID
}

message UnfollowUserResponse {
  bool success = 1;
  string message = 2;
}

// 获取我的关注列表
message GetMyFollowingListRequest {
  uint64 operator_id = 1;   // 操作人ID
  int32 page = 2;           // 页码（从1开始）
  int32 page_size = 3;      // 每页数量
  int32 user_role = 4;      // 可选，过滤用户角色：1=老板, 2=陪玩
}

// 获取我的粉丝列表
message GetMyFollowersListRequest {
  uint64 operator_id = 1;   // 操作人ID
  int32 page = 2;           // 页码（从1开始）
  int32 page_size = 3;      // 每页数量
  int32 user_role = 4;      // 可选，过滤用户角色：1=老板, 2=陪玩
}

// 获取互相关注列表
message GetMutualFollowListRequest {
  uint64 operator_id = 1;   // 操作人ID
  int32 page = 2;           // 页码（从1开始）
  int32 page_size = 3;      // 每页数量
}

// 检查关注状态
message CheckFollowStatusRequest {
  uint64 operator_id = 1;   // 操作人ID
  uint64 target_user_id = 2; // 目标用户ID
}

message CheckFollowStatusResponse {
  bool is_following = 1;     // 当前用户是否关注了目标用户
  bool is_followed = 2;      // 目标用户是否关注了当前用户
  bool is_mutual = 3;        // 是否互相关注
}

// 用户关注信息
message UserFollowInfo {
  uint64 user_id = 1;
  string nickname = 2;
  string avatar_url = 3;
  int32 role = 4;            // 用户角色：1=老板, 2=陪玩
  bool is_verified = 5;      // 是否验证（仅陪玩）
  double rating = 6;           // 评分（仅陪玩）
  int64 total_orders = 7;     // 总订单数（仅陪玩）
  bool is_mutual = 8;         // 是否互相关注
  int64 followed_at = 9;      // 关注时间戳
}

message GetMyFollowingListResponse {
  repeated UserFollowInfo users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message GetMyFollowersListResponse {
  repeated UserFollowInfo users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message GetMutualFollowListResponse {
  repeated UserFollowInfo users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

service User {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc LoginByCode(LoginByCodeRequest) returns (LoginByCodeResponse);
  rpc ForgetPassword(ForgetPasswordRequest) returns (ForgetPasswordResponse);
  rpc ChangePhone(ChangePhoneRequest) returns (ChangePhoneResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);

  // 帅币钱包相关接口
  rpc GetWallet(GetWalletRequest) returns (GetWalletResponse);
  rpc Recharge(RechargeRequest) returns (RechargeResponse);
  rpc Consume(ConsumeRequest) returns (ConsumeResponse);
  rpc CreateRechargeOrder(CreateRechargeOrderRequest) returns (CreateRechargeOrderResponse);
  rpc UpdateRechargeOrderStatus(UpdateRechargeOrderStatusRequest) returns (UpdateRechargeOrderStatusResponse);
  rpc RechargeList(RechargeListRequest) returns (RechargeListResponse);

  // 陪玩信息相关接口
  rpc GetCompanionProfile(GetCompanionProfileRequest) returns (GetCompanionProfileResponse);
  rpc UpdateCompanionProfile(UpdateCompanionProfileRequest) returns (UpdateCompanionProfileResponse);
  rpc UpdateCompanionStats(UpdateCompanionStatsRequest) returns (UpdateCompanionStatsResponse);
  rpc GetCompanionList(GetCompanionListRequest) returns (GetCompanionListResponse);
  
  // 陪玩排名相关接口
  rpc GetCompanionRatingRanking(GetCompanionRatingRankingRequest) returns (GetCompanionRatingRankingResponse);
  rpc GetCompanionOrdersRanking(GetCompanionOrdersRankingRequest) returns (GetCompanionOrdersRankingResponse);

  // 游戏技能管理接口
  rpc ListGameSkills(ListGameSkillsRequest) returns (ListGameSkillsResponse);
  rpc CreateGameSkill(CreateGameSkillRequest) returns (CreateGameSkillResponse);
  rpc UpdateGameSkill(UpdateGameSkillRequest) returns (UpdateGameSkillResponse);
  rpc DeleteGameSkill(DeleteGameSkillRequest) returns (DeleteGameSkillResponse);

  // 关注相关接口
  rpc FollowUser(FollowUserRequest) returns (FollowUserResponse);
  rpc UnfollowUser(UnfollowUserRequest) returns (UnfollowUserResponse);
  rpc GetMyFollowingList(GetMyFollowingListRequest) returns (GetMyFollowingListResponse);
  rpc GetMyFollowersList(GetMyFollowersListRequest) returns (GetMyFollowersListResponse);
  rpc GetMutualFollowList(GetMutualFollowListRequest) returns (GetMutualFollowListResponse);
  rpc CheckFollowStatus(CheckFollowStatusRequest) returns (CheckFollowStatusResponse);
}
